--- a/css/style.scss
+++ b/css/style.scss
@@ -243,7 +243,7 @@
     }
     .section_img_box {
       margin-top: 32px;
-      padding: 0 22px;
+      padding: 0 12px;
       .section_img_desc {
         padding: 12px 0;
         span {
@@ -266,6 +266,7 @@
               font-weight: 500;
               line-height: 24px;
               color: var(--color-gray);
+              word-break: break-all;
             }
           }
         }
@@ -375,7 +376,7 @@
               .table_nomal {
                 text-align: left;
                 width: 65%;
-                padding: 24px 14px;
+                padding: 24px 18px;
                 background-color: var(--bg-color-white);
                 word-break: break-all;
                 p {
@@ -405,6 +406,12 @@
         height: 80px;
       }
       .ad_desc {
+        .font_gm {
+          font-family: "GmarketSans" !important;
+          font-weight: 700 !important;
+          font-size: 16px !important;
+          margin-bottom: 12px;
+        }
         p {
           font-weight: 500;
           font-size: 15px;
@@ -449,7 +456,7 @@
     }
   }
   .story {
-    padding: 60px 0 24px 0;
+    padding: 24px 0;
     .section_text_wrap {
       .keyword_bage {
         display: inline-block;
@@ -513,9 +520,10 @@
           font-size: 16px;
           color: var(--color-gray);
           p {
-            word-break: break-all;
+            word-break: keep-all;
             letter-spacing: -0.5px;
-            line-height: 24px;
+            line-height: 20px;
+            font-size: 15px;
           }
           .t_color {
             font-weight: 700;
@@ -535,10 +543,11 @@
           }
           .about_desc_sub_title {
             letter-spacing: -0.5px;
-            padding: 12px 0 8px 0;
+            padding: 12px 0;
             h4 {
-              font-size: 20px;
+              font-size: 18px;
               font-weight: 700;
+              margin-bottom: 8px;
               color: var(--color-default);
             }
           }
@@ -631,9 +640,8 @@
           }
           .item_desc {
             text-align: left;
-            padding: 16px 0;
+            padding: 14px 0 24px 0;
             letter-spacing: -1px;
-            line-height: 14px;
             h4 {
               font-size: 18px;
               font-weight: 700;
@@ -697,14 +705,14 @@
         margin: 24px 0 0 0;
         padding: 0 24px 0 12px;
         -ms-overflow-style: none;
-        margin-bottom: 24px;
+        margin-bottom: 12px;
         &::-webkit-scrollbar {
           display: none;
         }
         li {
           width: calc(100%);
           font-weight: 500;
-          padding: 16px 0;
+          padding: 12px 0;
           text-align: left;
           letter-spacing: -0.5px;
           white-space: nowrap;
@@ -719,7 +727,7 @@
             left: 50%;
             transform: translateX(-50%);
             height: 2px;
-            width: 80%;
+            width: 100%;
             background-color: var(--bg-color-default);
             display: none;
           }
@@ -747,6 +755,7 @@
           text-align: left;
           display: flex;
           justify-content: space-between;
+          padding: 12px 0;
           .number_icon {
             background-color: var(--bg-color-blue);
             display: flex;
@@ -761,7 +770,6 @@
           }
           span {
             line-height: 20px;
-            margin-bottom: 20px;
             display: block;
             h4 {
               font-weight: 700;
