반응형 처리

--- a/css/common.css
+++ b/css/common.css
@@ -29,6 +29,7 @@
 /*초기 셋팅 import*/
 /*지마켓 폰트 font-weight : 300 / 500 / 700*/
 /*프리텐다드 폰트 font-weight : 100 / 200 / 300 / 400 / 500 / 600 / 700*/
+/*반응형 화면 크기*/
 * {
   box-sizing: border-box;
 }
