--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -16,4 +16,40 @@
       }
     }
   }
+  .premium {
+    .section_text_wrap {
+      .keyword_bage {
+        display: inline-block;
+        line-height: 38px;
+        padding: 0 20px;
+        font-size: 14px;
+        border-radius: 50px;
+        margin-bottom: 14px;
+        font-weight: 500;
+      }
+      .section_title {
+        margin-bottom: 8px;
+        font-size: 30px;
+        padding: 0 12px;
+        p {
+          letter-spacing: -1.5px;
+          font-weight: 100;
+          margin-bottom: 8px;
+          &:last-child {
+            font-weight: 700;
+          }
+        }
+      }
+    }
+    .premium_item_list {
+      padding: 0 12px;
+      ul {
+        li {
+          img {
+            height: 240px !important;
+          }
+        }
+      }
+    }
+  }
 }
